assets/src/scss/base/_typography.scss
html {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

p,
li {
  hyphens: none;

  --text-- {
    font-size: $font-size-sm;
    line-height: 1.6rem;

    @include x-large-and-up {
      font-size: $font-size-md;
      line-height: 1.75rem;
    }
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  --headings-- {
    font-family: $roboto;
    font-weight: bold;
  }

  &.has-text-align-center,
  &.has-text-align-right,
  &.has-text-align-left {
    width: 100%;
  }
}

h1 {
  line-height: 1.225;
  margin-bottom: 30px;
  font-size: $font-size-xxl;

  @include medium-and-up {
    font-size: $font-size-xxxxl;
  }

  @include large-and-up {
    margin-bottom: 48px;
  }
}

h2 {
  line-height: 1.38;
  margin-bottom: 5px;
  font-size: $font-size-xl;

  @include medium-and-up {
    font-size: $font-size-xxl;
  }

  @include x-large-and-up {
    margin-bottom: 24px;
  }
}

h3 {
  font-size: $font-size-lg;

  @include medium-and-up {
    font-size: $font-size-xl;
  }
}

h4 {
  font-size: $font-size-md;

  @include medium-and-up {
    font-size: $font-size-lg;
  }
}

h5 {
  font-size: $font-size-sm;

  @include medium-and-up {
    font-size: $font-size-md;
  }
}

h6 {
  font-size: $font-size-sm;
}

.white-text {
  color: $white;
}

a --link-- {
  color: $link-color;
  text-decoration: none;

  &:focus {
    outline: 2px solid rgba(0, 106, 255, 0.4);
    border-radius: 4px;
  }

  &:hover,
  &:active {
    color: $link-color;
    text-decoration: underline;
    border: none;
  }

  &:visited {
    color: $link-color-visited;
  }
}

